--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -1,4 +1,26 @@
 <html>
+    <head>
+        <title>
+            Article Three |Shravan saini
+        </title>
+        <meta name="viewport" content="width=device-width,initial-scale=1" />
+    </head>
+    
+    <body>
+        <div>
+            <a href="/" >Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article Three
+        </h3>
+        <div>
+            Date:15/08/1995
+        </div>
+        <div>
+            his is Article Three. 
+        </div>
+    </body>
 
 
 
