--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,26 +7,28 @@
     </head>
     
     <body>
-        <div>
-            <a href="/" >Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article One
-        </h3>
-        <div>
-            Date:05/08/1995
-        </div>
-        <div>
-            <p>
-                This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.
-            </p>
-            <p>
-                This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.
-            </p>
-            <p>
-                This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.
-            </p>
+        <div class ="container">
+            <div>
+                <a href="/" >Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article One
+            </h3>
+            <div>
+                Date:05/08/1995
+            </div>
+            <div>
+                <p>
+                    This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.
+                </p>
+                <p>
+                    This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.
+                </p>
+                <p>
+                    This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.This is Article one.
+                </p>
+            </div>
         </div>
     </body>
 
