[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,7 +4,7 @@
             Article One
         </title>
         <meta name="viewport" content="width=device-width,initial-scale" />
-        <link type="css/text" href="style.css">
+        <link type="tex/css" rel="stylesheet" href="style.css">
     </head>
     
     <body>
