[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,7 +4,10 @@
             Article One
         </title>
         <meta name="viewport" content="width=device-width,initial-scale" />
-        <link rel="stylesheet" type="tex/css" href="style.css">
+        <style>
+
+        </style>
+        <link rel="stylesheet" type="tex/css" href="/ui/style.css">
     </head>
     
     <body>
