[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -7,7 +7,7 @@
         <style>
 
         </style>
-        <link rel="stylesheet" type="tex/css" href="/ui/style.css">
+        <link type="tex/css" href="/ui/style.css" rel="stylesheet">
     </head>
     
     <body>
