[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -5,7 +5,7 @@
         </title>
         <meta name="viewport" content="width=device-width,initial-scale" />
        
-        <link type="tex/css" href="/ui/style.css" rel="stylesheet" />
+        <link  href="/ui/style.css" rel="stylesheet" />
     </head>
     
     <body>
