[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,7 @@
             Article One
         </title>
         <meta name="viewport" content="width=device-width,initial-scale" />
-       
-        <link href="style.css" rel="stylesheet" />
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     
     <body>
