--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,7 +4,7 @@
             Article One
         </title>
         <meta name="viewport" content="width=device-width,initial-scale" />
-        <link rel="stylesheet" type="text/css" href="style.css" />
+        <link rel="stylesheet" type="text/css" href="/ui/style.css" />
         
     </head>
     
