[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,21 +4,25 @@
             Article Two |Shravan saini
         </title>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
+         <link rel="stylesheet" type="text/css" href="/ui/style.css" />
+        
     </head>
     
     <body>
-        <div>
-            <a href="/" >Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article Two
-        </h3>
-        <div>
-            Date:25/08/1995
-        </div>
-        <div>
-            his is Article Two. 
+        <div class ="container">
+            <div>
+                <a href="/" >Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article Two
+            </h3>
+            <div>
+                Date:25/08/1995
+            </div>
+            <div>
+                his is Article Two. 
+            </div>
         </div>
     </body>
 
