[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,21 +4,24 @@
             Article Three |Shravan saini
         </title>
         <meta name="viewport" content="width=device-width,initial-scale=1" />
+         <link rel="stylesheet" type="text/css" href="/ui/style.css" />
     </head>
     
     <body>
-        <div>
-            <a href="/" >Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article Three
-        </h3>
-        <div>
-            Date:15/08/1995
-        </div>
-        <div>
-            his is Article Three. 
+        <div class="container">
+            <div>
+                <a href="/" >Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article Three
+            </h3>
+            <div>
+                Date:15/08/1995
+            </div>
+            <div>
+                his is Article Three. 
+            </div>
         </div>
     </body>
 
