[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,12 +4,22 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am your webapp.....i know that...
+        <div  class ="container">
+            <div class="center">
+                <img src="https://pbs.twimg.com/profile_images/731950666604810244/utZ4_FAd_400x400.jpg" class="img-medium"/>
+            </div>
+            <br>
+            <h3>Personal</h3>
+            <div>
+                I am saini.
+            </div>
+            <h3>Professional</h3>
+            <div>
+                I don't work anywhere.
+            </div>
+            <div id="footer">
+                
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
