--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
             </div>
             <hr />
             <div id="footer">
-                
+                This button<button id="counter">Click Me</button> will create an counter request.Value of Counter is <span id="count"></span> 
             </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
