--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
                 This button<button id="counter">Click Me</button> will create an counter request.Value of Counter is <span id="count">0</span> 
             </div>
         </div>
-        <script type="text/javascript" src="/ui/main.js">
+        <script type="text/javascript" src="main.js">
         </script>
     </body>
 </html>
