[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -23,6 +23,12 @@
             <div id="footer">
                 This button<button id="counter">Click Me</button> will create an counter request.Value of Counter is <span id="count">0</span> 
             </div>
+            <hr/>
+            <input type="text" id='inputarea' />
+            <input type='submit' placeholder='name' id='submit_btn' />
+            <ul id='namelist'>
+            
+            </ul>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
