--- a/ui/articles.html
+++ b/ui/articles.html
@@ -7,7 +7,7 @@
     
     <body>
         <div id="header">
-            <h2></h2>Writing the Articles is an Art</h2>
+            <h1>Writing the Articles is an Art</h1>
         </div>
     </body>
     
