[imad-console] Updates ui/articles.html

--- a/ui/articles.html
+++ b/ui/articles.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>Articles</title>
-        <link href="/ui/style.css" rel="stylesheet" />
+        <link href="/ui/articles.css" rel="stylesheet" />
     </head>
     
     <body>
         <div id="header">
-            <h1>Writing the Articles is an Art</h1>
+            <h1 id="heading">Writing the Articles is an Art</h1>
         </div>
     </body>
     
