--- a/ui/articles.html
+++ b/ui/articles.html
@@ -6,8 +6,8 @@
     </head>
     
     <body>
-        <div id="header">
-            <h1 id="heading">Writing the Articles is an Art</h1>
+        <div class="header">
+            <h1 class="heading">Writing the Articles is an Art</h1>
         </div>
     </body>
     
