--- a/ui/articles.html
+++ b/ui/articles.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Articles</title>
-        <link href="/ui/style.css" rel="stylesheet" />
+        <link href="/ui/articles.css" rel="stylesheet" />
     </head>
     
     <body>
