[imad-console] Updates ui/articles.html

--- a/ui/articles.html
+++ b/ui/articles.html
@@ -6,7 +6,10 @@
     </head>
     
     <body>
+        
         <div class="header">
+            <button id="loginBtnAtHome" value="Login" >Sign In</button>
+             <button id="logoutBtnAtHome" value="Sign Up" >Sign Up</button>
             <h1 class="heading">Writing the Articles is an Art</h1>
         </div>
     </body>
