[imad-console] Updates ui/articles.html

--- a/ui/articles.html
+++ b/ui/articles.html
@@ -14,7 +14,7 @@
             <h1 class="heading">Writing the Articles is an Art</h1>
         </div>
         
-        <div id='container'>
+        <div class='container'>
             <h2>Explore Newest Articles</h2>
             <ul id='newArticleList'>
             
